--- a/public/album1/album1.html
+++ b/public/album1/album1.html
@@ -20,7 +20,7 @@
     </p>
     <br />
     <div id="barrainicio">
-      <div id="editar" class="barra">Eliminar Cancion</div>
+      <div id="delete" class="barra">Eliminar Cancion</div>
       <br />
       <div><a class="barra" href="../addsongs/addsongs.html" id="addSongs">Agregar Cancion</a></div>
       <br />
@@ -114,6 +114,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="album1.js"></script>
+    <script src="album1.js" type="module"></script>
   </body>
 </html>
