--- a/public/login/login.html
+++ b/public/login/login.html
@@ -31,8 +31,8 @@
         <a href="../signup/signUp.html">Registrarse</a>
       </form>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="login.js"></script>
+    <script src="login.js" type="module"></script>
   </body>
 </html>
