--- a/public/addsongs/addsongs.html
+++ b/public/addsongs/addsongs.html
@@ -14,22 +14,40 @@
     <div>
       <form method="put">
         <label for="titulo">Título: </label>
-            <input type="text" id="titulo" name="titulo"  placeholder="Titulo" required />
+        <input
+          type="text"
+          id="titulo"
+          name="titulo"
+          placeholder="Titulo"
+          required
+        />
         <br />
         <br />
         <label for="duracion"> Duración: </label>
-            <input type="text" id="duracion" name="duracion" placeholder="4:23" required />
+        <input
+          type="text"
+          id="duracion"
+          name="duracion"
+          placeholder="4:23"
+          required
+        />
         <br />
         <br />
         <label for="link"> Link canción: </label>
-            <input type="url" id="link" name="link" required placeholder="https://..." />
+        <input
+          type="url"
+          id="link"
+          name="link"
+          required
+          placeholder="https://..."
+        />
         <br />
         <br />
-        <input class="add-button" type="submit" id="agregar"/>
+        <input class="add-button" type="submit" id="agregar" />
       </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
