--- a/public/signup/signUp.html
+++ b/public/signup/signUp.html
@@ -38,6 +38,6 @@
     </form>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="registro.js"></script>
+    <script src="registro.js" type="module"></script>
 </body>
 </html>
