--- a/public/tour/tour.html
+++ b/public/tour/tour.html
@@ -56,6 +56,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="tour.js"></script>
+    <script src="tour.js" type="module"></script>
   </body>
 </html>
