--- a/public/addAlbum/addAlbum.html
+++ b/public/addAlbum/addAlbum.html
@@ -11,7 +11,7 @@
     <a href="../menuAlbum/menualbum.html">
       <h2>Volver</h2>
     </a>
-    <div>
+    <div id="estiloAlbum">
       <form method="post">
         <label for="title"
           >Título
