--- a/public/album1/album1.html
+++ b/public/album1/album1.html
@@ -20,9 +20,9 @@
     </p>
     <br />
     <div id="barrainicio">
-      <div id="delete" class="barra">Eliminar Cancion</div>
+      <div id="editar" class="barra">Eliminar Cancion</div>
       <br />
-      <div><a class="barra" href="../addsongs/addsongs.html" id="addSongs">Agregar Cancion</a></div>
+      <div><a class="barra" id="addSongs">Agregar Cancion</a></div>
       <br />
       <div><a class="barra" href="../tour/tour.html">Fechas de Gira</a></div>
       <br />
@@ -34,86 +34,9 @@
         <p id="nombre-usuario">John Fogerty</p>
     </div>
     <div>
-      <ol>
-        <br />
-        <p id="contenia">Contiene canciones como estas:</p>
-        <br>
-        <p><strong>Lado A</strong></p>
-        <br>
-        <a href="https://www.youtube.com/watch?v=D3o2mAXu3gY" target="_blank">
-          <span>"I Put a Spell on You" (Screamin' Jay Hawkins) 4:33</span> <i id="eliminar" class="fas fa-trash-alt trash eliminar">
-          </i>
-        </a>
-        <br>
-        <br />
-        <a href="https://www.youtube.com/watch?v=HgaBJcaol0o" target="_blank">
-          <span>"The Working Man" 3:06</span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=Bs99a-5vgA0&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=2"
-          target="_blank"
-        >
-          <span>
-            "Suzie Q" (Eleanor Broadwater/Dale Hawkins/Stanley Lewis) 8:40
-          </span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <br>
-        <img id="al1" src="../img/1album.jpg" />
-        <br />
-        <br>
-        <p><strong>Lado B</strong></p>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=eCXopQy7Qoc&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=4"
-          target="_blank"
-        >
-          <span>
-            "Ninety-Nine and a Half (Won't Do)" (Steve Cropper/Eddie
-            Floyd/WilsonPickett) 3:40
-          </span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=TQnAVE8ZjQE&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=5"
-          target="_blank"
-        >
-          <span>"Get Down Woman" 3:10</span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=EBAqTiKMxKg&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=6"
-          target="_blank"
-        >
-          <span>"Porterville" 2:23</span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=hGrv-gzXQLQ&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=7"
-          target="_blank"
-        >
-          <span>"Gloomy" 3:51</span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-        <a
-          href="https://www.youtube.com/watch?v=hGrv-gzXQLQ&list=PLOu5DKBAMX7AHWANJq-O7nDZvJIdR4yms&index=7"
-          target="_blank"
-        >
-          <span>"Walk on the Water" (J. Fogerty, Tom Fogerty) 4:41</span><i id="eliminar" class="fas fa-trash-alt trash eliminar"></i>
-        </a>
-        <br>
-        <br />
-      </ol>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="album1.js" type="module"></script>
+    <script src="album1.js"></script>
   </body>
 </html>
