--- a/public/album1/album1.html
+++ b/public/album1/album1.html
@@ -20,7 +20,7 @@
     </p>
     <br />
     <div id="barrainicio">
-      <div id="editar" class="barra">Eliminar Cancion</div>
+      <div><a class="barra" href="../menuAlbum/menualbum.html" >Menu Album</a></div>
       <br />
       <div><a class="barra" id="addSongs">Agregar Cancion</a></div>
       <br />
@@ -32,9 +32,11 @@
           alt="Avatar"
         />
         <p id="nombre-usuario">John Fogerty</p>
-    </div>
-    <div>
-    </div>
+      </div>
+       <div id="canciones">
+            <ul class="playlist">
+            </ul>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="album1.js"></script>
